--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,17 +24,15 @@ services:
         image: docker.n8n.io/n8nio/n8n
         restart: always
         environment:
-            - N8N_HOST=n8n.jdevelopmen.xyz # 🔹 debe ser tu dominio
+            - N8N_HOST=n8n.jdevelopmen.xyz # 👉 usa tu dominio real
             - N8N_PORT=5678
-            - N8N_PROTOCOL=https
+            - N8N_PROTOCOL=https # 👉 clave para HTTPS
             - NODE_ENV=production
             - WEBHOOK_URL=https://n8n.jdevelopmen.xyz/
             - GENERIC_TIMEZONE=America/Bogota
         volumes:
             - n8n_data:/home/node/.n8n
             - ./local-files:/files
-        networks:
-            - shared-net
         labels:
             - "traefik.enable=true"
             - "traefik.http.routers.n8n.rule=Host(`n8n.jdevelopmen.xyz`)"
@@ -45,6 +43,3 @@ services:
 volumes:
     n8n_data:
     traefik_data:
-
-networks:
-    shared-net:
